@@ -2,6 +2,7 @@ Revision history for Perl extension Daje-Workflow-Savefile-Activity
 
 {{$NEXT}}
 
-    - Added possibility to check if file exits and should not be replaced
+    - 2025-02-01 Added path tag to indicate if file contains full path
+    - 2025-02-30 Added possibility to check if file exits and should not be replaced
     - original version
 
